add slider move

--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="pets.css">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../../assets/icons/favicon.ico" type="image/x-icon">
         <script src="../js/burger.js" defer></script>
         <script src="../js/popup.js" defer></script>
         <script src="../js/scriptpets.js" defer></script>
