--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../../assets/icons/favicon.ico" type="image/x-icon">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <link type="text/css" rel="stylesheet" href="main.css">
         <script src="../js/burger.js" defer></script>
         <script src="../js/popup.js" defer></script>
@@ -114,7 +120,7 @@
                         <button class="sl-button slider-button">
                             <img src="../../assets/icons/arrow.svg" alt="Arrow left ">
                         </button>
-                        <div class="pets__slider-box" > 
+                        <div class="pets__slider-box animate__animated" > 
                         <template id="pets-item">
                             <div class="pets__content-items">
                                 <img class="pets__picture" src="../../assets/images/pets-katrine.jpg" alt="" width="270" height="270">
