edit wrapper, pic, vh

--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -6,6 +6,10 @@
         <link type="text/css" rel="stylesheet" href="pets.css">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="../../assets/icons/favicon.ico" type="image/x-icon">
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <script src="../js/burger.js" defer></script>
         <script src="../js/popup.js" defer></script>
         <script src="../js/scriptpets.js" defer></script>
